--- a/vignettes/Development/Quality control/Publication/Molecular verification - metal.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - metal.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
 This vignette demonstrates the verification process of the molecular
-version of Simplebox for a substance with a metal class.
+version of Simplebox for a substance of class 'metal'.
 First, the k's are compared between R and excel,
 and consequently the steady state masses are compared. This is done for
 5 molecular substances; each of a different chemical class (no class,
@@ -281,24 +281,6 @@ As can be seen in Figure 4 above, the k's that have a relative difference larger
 than 1 percentile go from water to sediment or from sediment to water. Changing 
 the formula for calculating settling velocity when Test = TRUE for the sedimentation
 and resuspension processes (explained above under 'Settling velocity') also solves these differences.
-
-#### From marine sediment
-```{r}
-ms <- kaas |>
-  filter(fromSubCompart == "marinesediment") |>
-  filter(fromScale == "Regional")
-
-vd <- World$fetchData("VertDistance") |>
-  filter(Scale == "Regional") |>
-  filter(SubCompart == "marinesediment")
-
-vd <- vd$VertDistance
-
-tosea <- ms |>
-  filter(toSubCompart == "sea") |>
-  mutate(k = k*vd)
-
-```
 
 ## Run again with Test=TRUE
 
