--- a/vignettes/Development/Quality control/Publication/Particulate verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Particulate verification.Rmd
@@ -28,6 +28,10 @@ each of these classes is that some processes differ per class.
 
 First, the world needs to be initialized for a substance. In this case, that substance
 is nAg 10nm, which is a particle. 
+
+We will first show the version of the R-code that has been adjusted to match the Excel Version. This means that the code is initialized with the parameter Test = TRUE. As such, this code should match (except for rounding differences) the results of the Excel version.
+
+##Test = TRUE
 ```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 substance <- "nAg_10nm"
 
@@ -210,13 +214,15 @@ ggplot(sorted_diff, aes(x = from, y = reldif)) +
   geom_hline(yintercept = 0.001, color = "red") +
   geom_hline(yintercept = -0.001, color = "red") +
   custom_theme()+
-  labs(x = "from", y = "Relative diff")
+  labs(x = "from", y = "Relative diff") + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+        aspect.ratio = 1/3) 
 ```
 
 
 ```{r}
 soil <- kaas|>
-  filter(fromSubCompart == "naturalsoil") |>
+  filter(fromSubCompart == "agriculturalsoil") |>
   filter(fromScale == "Continental") |>
   filter(fromSpecies == "Large")
 
@@ -293,10 +299,9 @@ lake <- kaas |>
 ## Run again with an altered copy of the excel file
 
 An altered copy of the Excel file used for comparison was created. In this file, 
-all kdeg rates were changed from 0 to 1e-20, and all kdis rates were changed from their original values to 0. 
-
+all kdeg rates were changed from 0 to 1e-20.
 ```{r Test TRUE, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4plastics_rev009-1_",substance,"_copy.xlsx") 
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4plastics_rev009-1_",substance,"_copy_deg.xlsx") 
 
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
@@ -495,5 +500,153 @@ ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   ggtitle(paste0("Figure 7: Relative differences between steady state masses in excel and R (SB1solve) - ", substance)) +
   geom_hline(yintercept = 0.001, color="red") +
   geom_hline(yintercept = -0.001, color="red") +
-  custom_theme()
+  custom_theme() + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+        aspect.ratio = 1/3) 
+```
+
+##Test = FALSE
+Now, we will observe the differences made to the code for the R-version by returning to Test = False. This excludes any adjustments to the DragCoefficient options for the settling velocity, which are highlighted in the vignette about Sedimentation. 
+The following adjustments are then initialized: 
+- kdis is not included
+- Dry Deposition is implemented in a new manner, according to the Loteur v2 reference guide. 
+- Thermal velocity in heteroagglomeration is now calculated according to the temperature of the scale, instead of a constant value of T = 285K. 
+
+As can be observed from Figure 8 and 9, Relative differences become large (>0.8). Most of these differences are attributed to the adjustments in the Dry deposition implementation. 
+```{r comparison of fluxes with test = FALSE, include=TRUE, echo=FALSE, warning=FALSE}
+World$SetConst(Test = "FALSE")
+World$UpdateKaas(mergeExisting = FALSE)
+SBexcel.K <- read.xlsx(SBExcelName,
+                  colNames = FALSE,
+                  namedRegion = "K")
+SBexcel.Names <- read.xlsx(SBExcelName,
+                  colNames = FALSE,
+                  namedRegion = "box_names")
+
+colnames(SBexcel.K) <- SBexcel.Names
+
+SBexcel.K$to <-  as.character(SBexcel.Names)
+
+SBexcel.K <- pivot_longer(SBexcel.K, cols =  as.character(SBexcel.Names), values_to = "k", names_to = "from")
+
+length(SBexcel.K$k)
+
+#adding "from" and "to" acronyms to the R K matrix
+kaas <- as_tibble(World$kaas)
+unique(kaas$fromScale)
+unique(kaas$fromSubCompart)
+
+#R version does not us the acronyms of the excel version, set-up to convert them
+#Note: this map creates the wrong acronym for soil and sediment at global scale, this is fixed afterwards
+accronym_map <- c("marinesediment" = "sd2",
+                "freshwatersediment" = "sd1",
+                "lakesediment" = "sd0", #SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
+                "agriculturalsoil" = "s2",
+                "naturalsoil" = "s1",
+                "othersoil" = "s3",
+                "air" = "a",
+                "deepocean" = "w3",
+                "sea" = "w2",
+                "river" = "w1",
+                "lake" = "w0", 
+                "cloudwater" = "cw")
+
+accronym_map2 <- c("Arctic" = "A",
+                   "Moderate" = "M",
+                   "Tropic" = "T",
+                   "Continental" = "C",
+                   "Regional" = "R")
+
+accronym_map3 <- c("Dissolved" = "D", 
+                   "Gas" = "G", 
+                   "Large" = "P", 
+                   "Small" = "A",
+                   "Solid" = "S", 
+                   "Unbound" = "U")
+
+# kaas |> filter(fromScale == "Tropic" & process == "k_Degradation") |> print(n=50)
+
+kaas <- kaas |> mutate(from =  paste0(accronym_map[fromSubCompart], 
+                            accronym_map2[fromScale], 
+                            accronym_map3[fromSpecies]),
+               to = paste0(accronym_map[toSubCompart], 
+                           accronym_map2[toScale], 
+                           accronym_map3[toSpecies]))
+
+kaas <-
+  kaas |>
+  mutate(from =
+                   ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") &
+                            (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"),
+                          str_replace_all(from, c("sd2"="sd","s1"="s")),
+                          from)) |>
+  mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") &
+                       (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2"="sd","s1"="s")), to))
+
+kaas2 <- kaas |>  
+  filter(from != to) |> #filtering the diagonals ou
+  group_by(from, to) %>% summarize(k = sum(k)) #R version sometimes has multiple k's per fromto box; excel only has the summed k's per box
+
+kaas2$fromto <- paste(sep = "_", kaas2$from, kaas2$to)
+
+diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to,] #all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
+
+#filter out dissolved and gas processes
+
+filtered_excel <- diagonal_excel[!endsWith(diagonal_excel$from, "D"), ]
+filtered_excel <- filtered_excel[!endsWith(filtered_excel$from, "G"), ]
+
+#filter out molecular (unbound) state
+#R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
+
+diagonal_R <-aggregate(k ~ from, data = kaas, FUN = sum) 
+print(diagonal_R$from)
+filtered_R <- diagonal_R[!endsWith(diagonal_R$from, "U"), ]
+      
+#Check for any differences in what compartments there are between versions
+diagonal_R$from[!diagonal_R$from %in% diagonal_excel$from] # "sd0C" "sd0R" were added in sboo v1
+
+filtered_R$from[!filtered_R$from %in% filtered_excel$from]
+diagonal_excel$from[!diagonal_excel$from %in% diagonal_R$from] #all excel diagonals are in those of R
+filtered_excel$from[!filtered_excel$from %in% filtered_R$from]
+
+#Single dataframe with both the R and excel diagonals
+merged_diagonal <- merge(filtered_R, filtered_excel, by = "from", suffixes = c("_R", "_Excel")) 
+merged_diagonal$k_Excel <- -merged_diagonal$k_Excel #Turning the "negative" values from the Excel matrix into positive ones
+merged_diagonal$diff <- merged_diagonal$k_R - merged_diagonal$k_Excel 
+sorted_diff <- merged_diagonal[order(abs(merged_diagonal$diff), decreasing = TRUE), ] |>
+  mutate(reldif  = abs(diff/k_R))
+
+
+
+SBexcel.K <- filter(SBexcel.K, k != 0 & SBexcel.K$from != SBexcel.K$to)
+SBexcel.K$fromto <- paste(sep = "_", SBexcel.K$from, SBexcel.K$to)
+
+mergedkaas <- merge(kaas2, SBexcel.K, by = c("from", "to"), suffixes = c("_R", "_Excel"))
+
+mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel #compare R k to Excel K
+
+mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)  
+
+ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
+  geom_point() +
+  scale_color_gradient(low = "green", high = "red", trans = "log10") +
+  ggtitle(paste0("Figure 8: Absolute differences k's between R and excel for ", substance, "with test = FALSE")) +
+  theme(
+    axis.text.y = element_text(size = 12),
+    axis.text.x = element_text(angle = 45, hjust = 1, size = 10), 
+    plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
+  )
+
+ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
+  geom_point() +
+  scale_color_gradient(low = "green", high = "red") +
+  ggtitle(paste0("Figure 9: Relative differences k's between R and excel for ", substance," with test = False")) +
+  theme(
+    axis.text.y = element_text(size = 12),
+    axis.text.x = element_text(angle = 45, hjust = 1, size = 10), 
+    plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
+  )
+
+
 ```
