--- a/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
+++ b/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
@@ -53,13 +53,15 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "Sb(III)", # metal
                           "nAg_10nm", # nanoparticle (class particle) #not in substancelist?
                           "microplastic") # microplastic (class particle)
-substance <- Potential_substances[6]
+
 #create the relevant world for the substance selected
 source("baseScripts/initWorld_onlyParticulate.R")
 #source("baseScripts/initworld_onlyMolec.R")
 
-length(unique(World$kaas$process))
+substance <- Potential_substances[6]
+World$substance <- substance
 
+length(unique(World$kaas$process))
 ProcessNanoFunctions <- c("k_Advection", "k_Burial",
                          "k_HeteroAgglomeration.a", "k_HeteroAgglomeration.wsd",
                          "k_CWscavenging", "k_Degradation",
